# $Id: Makefile.am 24795 2022-04-28 15:20:36Z yeti-dn $

svg_sources = \
	cd_line.svg \
	cd_rline.svg \
	cd_rstep.svg \
	cd_step.svg \
	circle_down.svg \
	circle_up.svg \
	gwy_3d_base-24.svg \
	gwy_arithmetic-24.svg \
	gwy_binning-24.svg \
	gwy_bold-20.svg \
	gwy_cantilever-24.svg \
	gwy_color_range-24.svg \
	gwy_color_range_adaptive-24.svg \
	gwy_color_range_auto-24.svg \
	gwy_color_range_fixed-24.svg \
	gwy_color_range_full-24.svg \
	gwy_convolution-24.svg \
	gwy_convolve-24.svg \
	gwy_correct_affine-24.svg \
	gwy_correlation_mask-24.svg \
	gwy_correlation_length-24.svg \
	gwy_crop-24.svg \
	gwy_cross_profile-24.svg \
	gwy_curvature-24.svg \
	gwy_cwt-24.svg \
	gwy_data_measure-24.svg \
	gwy_deconvolve-24.svg \
	gwy_disconnected-24.svg \
	gwy_displacement_field-24.svg \
	gwy_distance-24.svg \
	gwy_distance_transform-24.svg \
	gwy_distribution_angle-24.svg \
	gwy_distribution_slope-24.svg \
	gwy_drift-96.svg \
	gwy_dwt-24.svg \
	gwy_edge-24.svg \
	gwy_enforce_distribution-24.svg \
	gwy_entropy-24.svg \
	gwy_extend-24.svg \
	gwy_extract_path-24.svg \
	gwy_facet_analysis-24.svg \
	gwy_facet_measure-24.svg \
	gwy_facet_level-24.svg \
	gwy_favourite-24.svg \
	gwy_fft-24.svg \
	gwy_fft_2d-24.svg \
	gwy_fft_filter_1d-24.svg \
	gwy_fft_filter_2d-24.svg \
	gwy_filter-24.svg \
	gwy_find_peaks-24.svg \
	gwy_fit_shape-24.svg \
	gwy_fix_zero-24.svg \
	gwy_flip_diagonally-24.svg \
	gwy_flip_horizontally-24.svg \
	gwy_flip_vertically-24.svg \
	gwy_fractal-24.svg \
	gwy_fractal_measure-24.svg \
	gwy_fractal_correction-24.svg \
	gwy_frequency_split-24.svg \
	gwy_gl_material-16.svg \
	gwy_gradient_horizontal-24.svg \
	gwy_gradient_vertical-24.svg \
	gwy_grain_bounding_box-24.svg \
	gwy_grain_correlation-24.svg \
	gwy_grain_exscribed_circle-24.svg \
	gwy_grain_inscribed_circle-24.svg \
	gwy_grain_inscribed_box-24.svg \
	gwy_grains-24.svg \
	gwy_grains_edge-24.svg \
	gwy_grains_edge_remove-24.svg \
	gwy_grains_graph-24.svg \
	gwy_grains_measure-24.svg \
	gwy_grains_otsu-24.svg \
	gwy_grains_remove-24.svg \
	gwy_grains_statistics-24.svg \
	gwy_grains_water-24.svg \
	gwy_graph-24.svg \
	gwy_graph_align-24.svg \
	gwy_graph_cut-24.svg \
	gwy_graph_dos-24.svg \
	gwy_graph_export_ascii-24.svg \
	gwy_graph_export_png-24.svg \
	gwy_graph_export_vector-24.svg \
	gwy_graph_fd-24.svg \
	gwy_graph_filter-24.svg \
	gwy_graph_function-24.svg \
	gwy_graph_halfgauss-24.svg \
	gwy_graph_level-24.svg \
	gwy_graph_measure-24.svg \
	gwy_graph_palette-24.svg \
	gwy_graph_pointer-24.svg \
	gwy_graph_ruler-24.svg \
	gwy_graph_statistics-24.svg \
	gwy_graph_terrace_measure-24.svg \
	gwy_graph_vertical-24.svg \
	gwy_graph_zoom_fit-24.svg \
	gwy_graph_zoom_in-24.svg \
	gwy_graph_zoom_out-24.svg \
	gwy_hough-24.svg \
	gwy_immerse-24.svg \
	gwy_iso_roughness-24.svg \
	gwy_image_relation-24.svg \
	gwy_italic-20.svg \
	gwy_less-24.svg \
	gwy_level-24.svg \
	gwy_level_flatten_base-24.svg \
	gwy_level_median-24.svg \
	gwy_level_triangle-24.svg \
	gwy_light_rotate-24.svg \
	gwy_limit_range-24.svg \
	gwy_line_level-24.svg \
	gwy_load_debug-20.svg \
	gwy_load_info-20.svg \
	gwy_load_warning-20.svg \
	gwy_local_slope-24.svg \
	gwy_logscale_horizontal-24.svg \
	gwy_logscale_vertical-24.svg \
	gwy_mark_outliers-24.svg \
	gwy_mark_scars-24.svg \
	gwy_mark_with-24.svg \
	gwy_mask-16.svg \
	gwy_mask-24.svg \
	gwy_mask_add-24.svg \
	gwy_mask_circle-24.svg \
	gwy_mask_circle_exclusive-24.svg \
	gwy_mask_circle_inclusive-24.svg \
	gwy_mask_distribute-24.svg \
	gwy_mask_editor-24.svg \
	gwy_mask_exclude-24.svg \
	gwy_mask_exclude_circle-24.svg \
	gwy_mask_extract-24.svg \
	gwy_mask_fill_draw-24.svg \
	gwy_mask_fill_erase-24.svg \
	gwy_mask_grow-24.svg \
	gwy_mask_intersect-24.svg \
	gwy_mask_invert-24.svg \
	gwy_mask_line-24.svg \
	gwy_mask_morph-24.svg \
	gwy_mask_noisify-24.svg \
	gwy_mask_paint_draw-24.svg \
	gwy_mask_paint_erase-24.svg \
	gwy_mask_rect_exclusive-24.svg \
	gwy_mask_rect_inclusive-24.svg \
	gwy_mask_remove-24.svg \
	gwy_mask_shift-24.svg \
	gwy_mask_shrink-24.svg \
	gwy_mask_subtract-24.svg \
	gwy_mask_thin-24.svg \
	gwy_measure_lattice-24.svg \
	gwy_merge-24.svg \
	gwy_mfm_convert_to_force-24.svg \
	gwy_mfm_current_line-24.svg \
	gwy_mfm_field_find_shift-24.svg \
	gwy_mfm_field_shift-24.svg \
	gwy_mfm_parallel-24.svg \
	gwy_mfm_perpendicular-24.svg \
	gwy_more-24.svg \
	gwy_mutual_crop-24.svg \
	gwy_neural_apply-24.svg \
	gwy_neural_train-24.svg \
	gwy_next-24.svg \
	gwy_null_offsets-24.svg \
	gwy_palettes-16.svg \
	gwy_palettes-24.svg \
	gwy_path_level-24.svg \
	gwy_perspective_distort-24.svg \
	gwy_pointer_measure-24.svg \
	gwy_poly_distort-24.svg \
	gwy_polynom-24.svg \
	gwy_polynom_level-24.svg \
	gwy_previous-24.svg \
	gwy_profile-24.svg \
	gwy_profile_multiple-24.svg \
	gwy_psdf_log_phi-24.svg \
	gwy_pygwy-24.svg \
	gwy_radial_profile-24.svg \
	gwy_rank_filter-24.svg \
	gwy_rasterize-24.svg \
	gwy_remove_under_mask-24.svg \
	gwy_revolve_arc-24.svg \
	gwy_revolve_sphere-24.svg \
	gwy_rotate_180-24.svg \
	gwy_rotate_3d-24.svg \
	gwy_rotate-24.svg \
	gwy_rotate_90_ccw-24.svg \
	gwy_rotate_90_cw-24.svg \
	gwy_scale-24.svg \
	gwy_scale_horizontally-24.svg \
	gwy_scale_vertically-24.svg \
	gwy_scars-24.svg \
	gwy_scientific_number_format-18.svg \
	gwy_selections-24.svg \
	gwy_shader-24.svg \
	gwy_spectrum-24.svg \
	gwy_spot_remove-24.svg \
	gwy_square_samples-24.svg \
	gwy_stat_quantities-24.svg \
	gwy_stitch-24.svg \
	gwy_straighten_path-24.svg \
	gwy_subscript-20.svg \
	gwy_superscript-20.svg \
	gwy_synthetic_anneal-24.svg \
	gwy_synthetic_ballistic_deposition-24.svg \
	gwy_synthetic_brownian_motion-24.svg \
	gwy_synthetic_columnar-24.svg \
	gwy_synthetic_diffusion-24.svg \
	gwy_synthetic_discs-24.svg \
	gwy_synthetic_domains-24.svg \
	gwy_synthetic_fibres-24.svg \
	gwy_synthetic_lattice-24.svg \
	gwy_synthetic_line_noise-24.svg \
	gwy_synthetic_noise-24.svg \
	gwy_synthetic_objects-24.svg \
	gwy_synthetic_particles-24.svg \
	gwy_synthetic_pattern-24.svg \
	gwy_synthetic_phases-24.svg \
	gwy_synthetic_pileup-24.svg \
	gwy_synthetic_spectral-24.svg \
	gwy_synthetic_turing_pattern-24.svg \
	gwy_synthetic_waves-24.svg \
	gwy_terrace_measure-24.svg \
	gwy_tilt-24.svg \
	gwy_tip_dilation-24.svg \
	gwy_tip_erosion-24.svg \
	gwy_tip_estimation-24.svg \
	gwy_tip_indent_analyze-24.svg \
	gwy_tip_lateral_force-24.svg \
	gwy_tip_map-24.svg \
	gwy_tip_model-24.svg \
	gwy_tip_pid-24.svg \
	gwy_unrotate-24.svg \
	gwy_value_invert-24.svg \
	gwy_volume-24.svg \
	gwy_volume_arithmetic-24.svg \
	gwy_volume_calibrate-24.svg \
	gwy_volume_dimensions-24.svg \
	gwy_volume_fd-24.svg \
	gwy_volume_invert-24.svg \
	gwy_volume_kmeans-24.svg \
	gwy_volume_kmedians-24.svg \
	gwy_volume_line_stats-24.svg \
	gwy_volume_plane_stats-24.svg \
	gwy_volume_slice-24.svg \
	gwy_volume_swap_axes-24.svg \
	gwy_volumize-24.svg \
	gwy_volumize_layers-24.svg \
	gwy_wrap_value-24.svg \
	gwy_xy_denoise-24.svg \
	gwy_xyzize-24.svg \
	gwy_zero_maximum-24.svg \
	gwy_zero_mean-24.svg \
	gwy_zero_under_mask-24.svg \
	gwy_zoom_1_1-24.svg \
	gwy_zoom_fit-24.svg \
	gwy_zoom_in-24.svg \
	gwy_zoom_out-24.svg

# Not really sources, but PNG icons that were not included as API symbols.
png_sources = \
	gwy_local_slope-24.png \
	gwy_presentation_attach-24.png \
	gwy_presentation_edge_harris_corner-24.png \
	gwy_presentation_edge_hough-24.png \
	gwy_presentation_extract-24.png \
	gwy_presentation_local_contrast-24.png \
	gwy_presentation_log-24.png \
	gwy_presentation_rank-24.png \
	gwy_presentation_remove-24.png \
	gwy_presentation_sem-24.png \
	gwy_presentation_shading-24.png

noinst_DATA = \
	$(svg_sources) \
	$(png_sources)

EXTRA_DIST = $(noinst_DATA)
